--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.services.receiver.serviceName }} 
+  name: {{ .Values.services.initstagegroup.serviceName }} 
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
