--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -444,6 +444,20 @@ podconfig:
           cpu: 400m
           memory: 700Mi 
 
+  mockmv:
+    service:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      resources:
+        requests:
+          cpu: 200m
+          memory: 500Mi
+        limits:
+          cpu: 400m
+          memory: 700Mi
+
   postgres:
     service:
       replicas: 1
