[MOSIP-11894] README updated.

--- a/deployment/v3/cluster/aws/ingress_values.yaml
+++ b/deployment/v3/cluster/aws/ingress_values.yaml
@@ -4,6 +4,7 @@ controller:
       service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
       service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
       service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
     httpsPort:
       targetPort: 80 # TLS termination at LB, so traffic forwarded to 443 must go to 80
   config:
