--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
@@ -52,12 +52,15 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.packet.containerPort }}
+        - name: server-port
+          containerPort: {{ .Values.services.packet.ports.containerPort }}
+        - name: hazelcast-port
+          containerPort: {{ .Values.services.packet.ports.hazelcastPort }}
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.packet.healthUrl }} 
-            port: {{ .Values.services.packet.containerPort }} 
+            port: {{ .Values.services.packet.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
