[MOSIP-13000] Minor update to configmap.

--- a/deployment/v3/cluster/aws/global_configmap.yaml
+++ b/deployment/v3/cluster/aws/global_configmap.yaml
@@ -4,5 +4,5 @@ metadata:
   name: global
   namespace: default
 data:
-  mosip_api_host: api.sandbox.mosip.net
+  mosip-api-host: api.sandbox.mosip.net
 
