--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -78,22 +78,50 @@ podconfig:
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
 
-    preprocstagegroup:
+    group2:
       replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
  
-    coreprocstagegroup:
+    group3:
       replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
  
-    postprocstagegroup:
+    group4:
       replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+ 
+    group5:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+ 
+    group6:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+ 
+    group7:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+
+    trans:
+      replicas: 1 
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
@@ -106,7 +134,7 @@ podconfig:
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
 
-    trans:
+    reprocess:
       replicas: 1 
       maxSurge: 1
       maxUnavailable: 0
@@ -128,7 +156,7 @@ podconfig:
       java_opts: "-Xms500M -Xmx500M"
 
   dmzregproc:  
-    initstagegroup:
+    group1:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 1
