--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -78,29 +78,43 @@ podconfig:
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
 
-    preprocstagegroup:
+    group2:
       replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
  
-    coreprocstagegroup:
+    group3:
       replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
  
-    postprocstagegroup:
+    group4:
       replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
-
-    eis: 
-      replicas: 1 
+ 
+    group5:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+ 
+    group6:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+ 
+    group7:
+      replicas: 1
       maxSurge: 1
       maxUnavailable: 0
       minReadySeconds: 10
@@ -113,8 +127,22 @@ podconfig:
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
 
+    eis: 
+      replicas: 1 
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+
+    reprocess:
+      replicas: 1 
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+
   dmzregproc:  
-    initstagegroup:
+    group1:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 1
