--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -47,19 +47,19 @@ versions:
 
     regproc:
       group1:
-        'group-1': 'mosipdev/group-1:MOSIP-12124'
-      group1:
-        'group-2': 'mosipdev/group-2:MOSIP-12124'
-      group1:
-        'group-3': 'mosipdev/group-3:MOSIP-12124'
-      group1:
-        'group-4': 'mosipdev/group-4:MOSIP-12124'
-      group1:
-        'group-5': 'mosipdev/group-5:MOSIP-12124'
-      group1:
-        'group-6': 'mosipdev/group-6:MOSIP-12124'
-      group1:
-        'group-7': 'mosipdev/group-7:MOSIP-12124'
+        'regproc-group-1': 'mosipdev/group-1:MOSIP-12124'
+      group2:
+        'regproc-group-2': 'mosipdev/group-2:MOSIP-12124'
+      group3:
+        'regproc-group-3': 'mosipdev/group-3:MOSIP-12124'
+      group4:
+        'regproc-group-4': 'mosipdev/group-4:MOSIP-12124'
+      group5:
+        'regproc-group-5': 'mosipdev/group-5:MOSIP-12124'
+      group6:
+        'regproc-group-6': 'mosipdev/group-6:MOSIP-12124'
+      group7:
+        'regproc-group-7': 'mosipdev/group-7:MOSIP-12124'
       camel:
         'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:develop'
       eis: 
