[MOSIP-12444] Annotations added.

--- a/deployment/v3/external/iam/values.yaml
+++ b/deployment/v3/external/iam/values.yaml
@@ -6,6 +6,8 @@ auth.adminUser: admin
 ingress:
   enabled: true
   hostname: iam.mosip.net
+  annotations:
+    ingress.kubernetes.io/class: nginx
 
 proxyAddressForwarding: true
 
