--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.services.initstagegroup.serviceName }} 
+  name: {{ .Values.services.group1.serviceName }} 
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
   - port: {{ .Values.services.receiver.ports.servicePort }}
     targetPort: {{ .Values.services.receiver.ports.containerPort }}
   selector:
-    app: {{ .Values.services.initstagegroup.serviceName }} 
+    app: {{ .Values.services.group1.serviceName }} 
