--- a/deployment/sandbox-v2/helm/charts/regproc/templates/manual-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/manual-svc.yaml
@@ -8,4 +8,4 @@ spec:
   - port: {{ .Values.services.manual.ports.servicePort }}
     targetPort: {{ .Values.services.manual.ports.containerPort }}
   selector:
-    app: {{ .Values.services.coreprocstagegroup.serviceName }} 
+    app: {{ .Values.services.group3.serviceName }} 
