--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -151,7 +151,7 @@ versions:
 
     websub:
       service:
-        'websub-service': 'ckm007/websub-service:1.1.5'
+        'websub-service': 'mosipdev/websub-service:1.1.5'
 
     mock:
       abis:
