[MOSIP-13321] removed support for depricated mock abis service and added latest

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -159,7 +159,7 @@ versions:
 
     mock:
       abis:
-        'mock-abis': 'mosipid/mock-abis:1.1.4'
+        'mock-abis': 'mosipdev/mock-abis:1.1.5'
 #      biosdk: 
 #        'mock-biosdk-service': 'mosipid/sdk-services:latest'
 
