--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -160,7 +160,7 @@ regproc:
 
 # Postgres persistent storage
 postgres:
-  external: true  # Postgres installed outside cluster, and not installed using these scripts. Set to true if
+  external: false  # Postgres installed outside cluster, and not installed using these scripts. Set to true if
                    # you already have postgres running on a separate system.
   # Change host here if external: true
   host: '{{clusters.mz.nodeport_node}}'  # Host name of any node since standard sandbox runs postgres as pod on nodeport
