--- a/deployment/v3/cluster/global_configmap.yaml
+++ b/deployment/v3/cluster/global_configmap.yaml
@@ -5,7 +5,6 @@ metadata:
   name: global
   namespace: default
 data:
-  mosip-api-host: api.sandbox.mosip.net
   mosip-api-host-url: https://api.sandbox.mosip.net
-  is-glowroot: "false"
+  is_glowroot_env: absent
 
