--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -43,7 +43,7 @@ versions:
     registration_client:
       downloader:
         'reg-client-downloader': 'mosipid/registration-client:1.1.5'
-      version: 1.1.5-rc2
+      version: 1.1.5
 
     regproc:
       camel:
